<resources>
    <string name="app_name">IOTtechHRM</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="please_required">please required</string>
    <string name="Please_Check_Your_Internet">please check your internet</string>
    <string name="slow_network_connection">slow network connection</string>
    <string name="Password_is_required">Password is required...</string>
    <string name="Email_is_required">Email is required</string>
    <string name="Alert_">Alert !!!</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="Logout_Sucessfully">Logout Successfully</string>
    <string name="Profile">Profile</string>
    <string name="User_Image">User Image</string>
    <string name="Submit">Submit</string>
    <string name="hint_name">Name</string>
    <string name="Full_Name">Full Name</string>
    <string name="Current_Address">Current Adderess</string>
    <string name="Permanent_Address">Permanent Address</string>
    <string name="Date_of_Birth">Date of Birth</string>
    <string name="Update">Update</string>
    <string name="Contact">Contact</string>
    <string name="Invalid_Number">Invalid Number</string>
    <string name="updated_successfully">updated successfully</string>
    <string name="please_check_your_connection">please check your Internet</string>
    <string name="Leave">Leave</string>
    <string name="Apply_Leave">Apply Leave</string>
    <string name="Period_of_Leave">Period of Leave</string>
    <string name="Start_Date">Start Date</string>
    <string name="Date_of_return_from_Last_Leave">Date of return from Last Leave</string>
    <string name="Period_of_Last_Leave">Period of Last Leave</string>
    <string name="Leave_Address">Leave Address</string>
    <string name="Reason">Reason</string>
    <string name="Apply">Apply</string>
    <string name="Bottom_Section">Bottom Section</string>
    <string name="End_Date">End Date</string>
    <string name="Leave_Detail">Leave Detail</string>
    <string name="Attendance">Attendance</string>
    <string name="Overtime_Detail">Overtime Detail</string>
    <string name="Please_enter_your_email">Please enter your registerd email</string>
    <string name="Continue">Continue</string>
    <string name="Invalid_Email">Invalid Email</string>
    <string name="style_square">square_box</string>
    <string name="style_rounded">rounded_box</string>
    <string name="style_underline">underline</string>
    <string name="style_rounded_underline">rounded_underline</string>
    <string name="mask_character">\u2022</string>
    <string name="please_enter_the_valid_OTP">please enter valid OTP</string>
    <string name="please_enter_the_OTP">Please enter the OTP</string>
    <string name="Change_Password">Change Password</string>
    <string name="New_Password">New Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="password_minimum_Six_characters_at_least">password minimum Six characters at least</string>
    <string name="Your_confirm_password_not_match_with_password">Your confirm password not match with password</string>
    <string name="Salary_Detail">Salary Details</string>
    <string name="Paid_Amount_">"Paid Amount : "</string>
    <string name="Month_">"Month : "</string>
    <string name="Attendance_">"Attendance : "</string>
    <string name="Bonus_">Bonus: </string>
    <string name="Gross_Salary_">"Gross Salary : "</string>
    <string name="Deduction_">"Deduction : "</string>
    <string name="Net_Salary_">Net Salary: </string>
    <string name="Salary">Salary</string>
    <string name="month_picker">Month Picker</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="Salary_Slip">Salary Slip</string>
    <string name="Select_Date">Select Date</string>
    <string name="notification_error_ssl_cert_invalid">ssl error</string>
    <string name="Your_file_is_saved_in">Your file is saved in</string>
    <string name="Gross_Salary">Gross Salary</string>
    <string name="Deduction">Deduction</string>
    <string name="Salary_">Salary: </string>
    <string name="PF_Detail">PF Details</string>
    <string name="Basic_Salary">Basic Salary</string>
    <string name="Loan_Advance"><![CDATA[Loan & Advance]]></string>
    <string name="Loan_Detail">Loan Detail</string>
    <string name="Interest_Rate">Interest Rate</string>
    <string name="Payable_Amount">payable Amount</string>
    <string name="Instalment">Instalment</string>
    <string name="Loan_Instalment">Loan Instalment</string>
    <string name="Paid_Emi">Paid Emi</string>
    <string name="Loan_Amount">Loan Amount</string>

    <string name="exit_title">"Exit!"</string>
    <string name="exit_message">Do you want to exit?</string>
</resources>