<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DemoActivity.UserProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:fontFamily="@font/viga"
        android:text="@string/Profile"
        android:textColor="@color/black"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="@dimen/_10dp"
                app:contentPadding="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10dp">
                    <RelativeLayout
                        android:layout_width="@dimen/_120dp"
                        android:layout_height="@dimen/_120dp"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal"
                        android:padding="@dimen/_10dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/owner_pic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:src="@drawable/avtar"
                            app:civ_border_color="@color/purple_200"
                            app:civ_border_width="@dimen/_2sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="@dimen/_10sp"
                            android:text="@string/User_Image"
                            android:textColor="@color/white"
                            android:textSize="12sp" />


                    </RelativeLayout>
                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:fontFamily="@font/baumans"
                        android:hint="@string/Full_Name"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="@drawable/edittext_enable"
                        android:textColorHint="@color/hint_color"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"/>
                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:fontFamily="@font/baumans"
                        android:hint="@string/email"
                        android:enabled="false"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="@drawable/edittext_enable"
                        android:textColorHint="@color/hint_color"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"/>
                    <EditText
                        android:id="@+id/et_contact"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:fontFamily="@font/baumans"
                        android:hint="@string/Contact"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="@drawable/edittext_enable"
                        android:textColorHint="@color/hint_color"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"/>
                    <EditText
                        android:id="@+id/et_current"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="45dp"
                        android:fontFamily="@font/baumans"
                        android:hint="@string/Current_Address"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="@drawable/edittext_enable"
                        android:textColorHint="@color/hint_color"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"/>
                    <EditText
                        android:id="@+id/et_permanent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="45dp"
                        android:fontFamily="@font/baumans"
                        android:hint="@string/Permanent_Address"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="@drawable/edittext_enable"
                        android:textColorHint="@color/hint_color"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"/>

                    <Spinner
                        android:id="@+id/spin_gender"
                        style="@style/spinner_style"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:fontFamily="@font/baumans"
                        android:popupBackground="@drawable/spinner_popup_background"
                        android:textColor="@drawable/edittext_enable"
                        android:layout_marginTop="@dimen/_20dp"
                        android:theme="@style/spinnerTheme"/>
                    <RelativeLayout
                        android:id="@+id/rl_from_date"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="@dimen/_20dp">
                        <EditText
                            android:id="@+id/et_dob"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:enabled="true"
                            android:focusable="false"
                            android:fontFamily="@font/baumans"
                            android:hint="@string/Date_of_Birth"
                            android:inputType="number"
                            android:background="@drawable/edit_text_bg"
                            android:textColor="@drawable/edittext_enable"
                            android:textColorHint="@color/hint_color"
                            android:padding="8dp"
                            />
                        <ImageView
                            android:id="@+id/iv_dob"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="@dimen/_10dp"
                            android:src="@drawable/text_"
                            app:tint="@color/purple_200"></ImageView>
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/btn_submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/back_corner_gradient"
                android:fontFamily="@font/baumans"
                android:gravity="center"
                android:padding="@dimen/_10dp"
                android:text="@string/Update"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20dp" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>