<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_tool"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/toolbar_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/balthazar"
            android:text="@string/Apply_Leave"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"></TextView>

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:elevation="10dp"
            android:src="@drawable/back_arrow"></ImageView>

    </RelativeLayout>

    <ScrollView
        android:layout_below="@id/rl_tool"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_app_theme"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">

        <Spinner
            android:id="@+id/spin_leave_cat"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:fontFamily="@font/baumans"
            android:popupBackground="@drawable/spinner_popup_background"
            android:textColor="@drawable/edittext_enable"
            android:theme="@style/spinnerTheme"></Spinner>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_pl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/hint_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:id="@+id/et_pl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baumans"
                android:hint="@string/Period_of_Leave"
                android:textColor="@drawable/edittext_enable"
                android:textColorHint="@color/hint_color"
                android:theme="@style/TextInputLayoutStyle" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:id="@+id/rl_from_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_start_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_color"
                app:boxStrokeColor="@color/text_input_layout_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:focusable="false"
                    android:fontFamily="@font/baumans"
                    android:hint="@string/Start_Date"
                    android:inputType="number"
                    android:textColor="@drawable/edittext_enable"
                    android:textColorHint="@color/hint_color"
                    android:theme="@style/TextInputLayoutStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10dp"
                android:src="@drawable/text_"
                app:tint="@color/purple_200"></ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_end_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_color"
                app:boxStrokeColor="@color/text_input_layout_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:focusable="false"
                    android:fontFamily="@font/baumans"
                    android:hint="@string/End_Date"
                    android:inputType="number"
                    android:textColor="@drawable/edittext_enable"
                    android:textColorHint="@color/hint_color"
                    android:theme="@style/TextInputLayoutStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10dp"
                android:src="@drawable/text_"
                app:tint="@color/purple_200"></ImageView>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_date_of_retuen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_date_of_retuen"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_color"
                app:boxStrokeColor="@color/text_input_layout_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_date_of_retuen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:focusable="false"
                    android:fontFamily="@font/baumans"
                    android:hint="@string/Date_of_return_from_Last_Leave"
                    android:inputType="number"
                    android:textColor="@drawable/edittext_enable"
                    android:textColorHint="@color/hint_color"
                    android:theme="@style/TextInputLayoutStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_date_of_retuen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10dp"
                android:src="@drawable/text_"
                android:tint="@color/purple_200"
                tools:ignore="UseAppTint"></ImageView>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_plastLeave"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/hint_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:id="@+id/et_plastLeave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baumans"
                android:hint="@string/Period_of_Last_Leave"
                android:textColor="@drawable/edittext_enable"
                android:textColorHint="@color/hint_color"
                android:theme="@style/TextInputLayoutStyle" />
        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:layout_marginTop="@dimen/_10dp"
            android:id="@+id/spin_last_leave_cat"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:fontFamily="@font/baumans"
            android:popupBackground="@drawable/spinner_popup_background"
            android:textColor="@drawable/edittext_enable"
            android:theme="@style/spinnerTheme"></Spinner>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_leave_add"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/hint_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_leave_add"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/baumans"
                android:hint="@string/Leave_Address"
                android:textColor="@drawable/edittext_enable"
                android:textColorHint="@color/hint_color"
                android:theme="@style/TextInputLayoutStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_reason"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/hint_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_reason"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/baumans"
                android:hint="@string/Reason"
                android:textColor="@drawable/edittext_enable"
                android:textColorHint="@color/hint_color"
                android:theme="@style/TextInputLayoutStyle" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_bottom_section"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/hint_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_bottom_section"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/baumans"
                android:hint="@string/Bottom_Section"
                android:text="Therefor, I request you to kindly grant me leave for"
                android:textColor="@drawable/edittext_enable"
                android:textColorHint="@color/hint_color"
                android:theme="@style/TextInputLayoutStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/back_corner_gradient"
            android:fontFamily="@font/baumans"
            android:gravity="center"
            android:padding="@dimen/_10dp"
            android:text="@string/Apply"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20dp" />





    </LinearLayout>

    </ScrollView>

</RelativeLayout>